--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Rolloen/TDJs2209LPDW#readme",
   "dependencies": {
+    "express": "^4.15.4",
     "mysql": "^2.14.1"
   }
 }
